--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -14,7 +14,7 @@
   "author": "chenmin",
   "license": "MIT",
   "engines": {
-    "node": "<=20"
+    "node": "20"
   },
   "dependencies": {
     "gatsby": "^4.6.2",
