--- a/_layouts/package.json
+++ b/_layouts/package.json
@@ -25,6 +25,8 @@
     "prism-themes": "^1.8.0",
     "prismjs": "^1.24.1",
     "rehype-katex": "^5.0.0",
-    "remark-math": "^3.0.1"
+    "remark-math": "^3.0.1",
+    "gatsby-omni-font-loader":"^2.0.2"
+    
   }
 }
